[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Shop/Back Button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/[buttons] 210 8bit Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/FormulaBook/Formula.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Formula Book/Money icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Formula Book/Archive Box.png" type="Texture" id=6]
[ext_resource path="res://Scenes/FormulaBook/FormulaBook.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="FormulaBook" type="Node"]
script = ExtResource( 8 )

[node name="FormulaBookUI" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="FormulaBookUI"]
margin_right = 2960.0
margin_bottom = 1440.0
rect_pivot_offset = Vector2( 656, 728 )
color = Color( 0.92549, 0.952941, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyIcon" type="TextureRect" parent="FormulaBookUI"]
margin_left = 2096.0
margin_top = 64.0
margin_right = 2175.0
margin_bottom = 164.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FormulaBookUI/MoneyIcon"]
margin_left = 110.0
margin_top = 34.0
margin_right = 776.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0.027451, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Php 1, 534, 954, 030.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaBookControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="FormulaBookControl"]
margin_left = 96.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 288, 680 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArchiveIcon" type="TextureButton" parent="FormulaBookControl"]
margin_left = 2624.0
margin_top = 1024.0
margin_right = 2872.0
margin_bottom = 1246.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Formula1" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 272.0
margin_right = 216.0
margin_bottom = 272.0

[node name="Formula2" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 712.0
margin_top = 272.0
margin_right = 712.0
margin_bottom = 272.0

[node name="Formula3" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 1232.0
margin_top = 272.0
margin_right = 1232.0
margin_bottom = 272.0

[node name="Formula4" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 1736.0
margin_top = 272.0
margin_right = 1736.0
margin_bottom = 272.0

[node name="Formula5" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 2208.0
margin_top = 272.0
margin_right = 2208.0
margin_bottom = 272.0

[node name="Formula6" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 808.0
margin_right = 216.0
margin_bottom = 808.0

[node name="Formula7" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 712.0
margin_top = 808.0
margin_right = 712.0
margin_bottom = 808.0

[node name="Formula8" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 1232.0
margin_top = 808.0
margin_right = 1232.0
margin_bottom = 808.0

[node name="Formula9" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 1736.0
margin_top = 808.0
margin_right = 1736.0
margin_bottom = 808.0

[node name="Formula10" parent="FormulaBookControl" instance=ExtResource( 4 )]
margin_left = 2208.0
margin_top = 808.0
margin_right = 2208.0
margin_bottom = 808.0

[connection signal="pressed" from="FormulaBookControl/BackButton" to="." method="_on_BackButton_pressed"]
